--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/unmsm.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>proyecto-calculo</title>
+    <title>Simulador Cloud FinOps</title>
   </head>
   <body>
     <div id="root"></div>
